Fixed alignment on user comment page.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,5 +1,5 @@
 .media-heading {
-background-color: #3285ef;
+background-color: #3E60AD;
 color:white;
 }
 
